==> bluekitchen/btstack/port/stm32-f103zet6-csr8x11-freertos/User/bsp/src/bsp_ps2.c <==
#include "bsp.h"
#define ps2_printf printf
#define RCC_PS2_CLK   RCC_APB2Periph_GPIOC
#define PORT_PS2_CLK  GPIOC
#define PIN_PS2_CLK   GPIO_Pin_13
#define RCC_PS2_DATA  RCC_APB2Periph_GPIOG
#define PORT_PS2_DATA GPIOG
#define PIN_PS2_DATA  GPIO_Pin_8
#define PS2_DATA_IS_HIGH()	((PORT_PS2_DATA->IDR & PIN_PS2_DATA) != 0)
#define PS2_CLK_1()  PORT_PS2_CLK->BSRR = PIN_PS2_CLK				/* CLK = 1 */
#define PS2_CLK_0()  PORT_PS2_CLK->BRR = PIN_PS2_CLK				/* CLK = 0 */
#define PS2_DATA_1() PORT_PS2_DATA->BSRR = PIN_PS2_DATA			/* DATA = 1 */
#define PS2_DATA_0() PORT_PS2_DATA->BRR = PIN_PS2_DATA			/* DATA = 0 */

void bsp_InitPS2(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	/* 打开GPIO时钟 */
	RCC_APB2PeriphClockCmd(RCC_PS2_CLK | RCC_PS2_DATA, ENABLE);

	PS2_CLK_1();
	PS2_DATA_1();

	/* 配置CLK 和 DATA 为输出开漏引脚 */
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_OD;

	GPIO_InitStructure.GPIO_Pin = PIN_PS2_CLK;
	GPIO_Init(PORT_PS2_CLK, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = PIN_PS2_DATA;
	GPIO_Init(PORT_PS2_DATA, &GPIO_InitStructure);
	
	g_tPS2.TxTimeOut = 0;
	g_tPS2.RxTimeOut = 0;
}

void PS2_StartWork(void)
{
	EXTI_InitTypeDef   EXTI_InitStructure;
	NVIC_InitTypeDef   NVIC_InitStructure;

	/* 使能SYSCFG时钟 */
	RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO, ENABLE);  /* Enable AFIO clock */

	/* Connect EXTI13 Line to PC13 pin */
	GPIO_EXTILineConfig(GPIO_PortSourceGPIOC, GPIO_PinSource13);	

	/* 配置 EXTI LineXXX */
	EXTI_InitStructure.EXTI_Line = EXTI_Line13;
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;		/* 下降沿(等待 DRDY 由1变0的时刻) */
	EXTI_InitStructure.EXTI_LineCmd = ENABLE;
	EXTI_Init(&EXTI_InitStructure);

	/* 设置NVIC优先级分组 */
	NVIC_PriorityGroupConfig(NVIC_PriorityGroup_4);

	/* 中断优先级配置 最低优先级 这里一定要分开的设置中断，不能够合并到一个里面设置 */
	NVIC_InitStructure.NVIC_IRQChannel = EXTI15_10_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x03;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x03;
	NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	PS2_CLK_1();
	PS2_DATA_1();

	g_tPS2.Status = 0;

	PS2_ClearBuf();		/* 复位FIFO，清除缓冲区 */
}

void PS2_StopWork(void)
{
	EXTI_InitTypeDef   EXTI_InitStructure;
//	NVIC_InitTypeDef   NVIC_InitStructure;

	/* 配置 EXTI LineXXX */
	EXTI_InitStructure.EXTI_Line = EXTI_Line13;
	EXTI_InitStructure.EXTI_Mode = EXTI_Mode_Interrupt;
	EXTI_InitStructure.EXTI_Trigger = EXTI_Trigger_Falling;	/* 下降沿(等待 DRDY 由1变0的时刻) */
	EXTI_InitStructure.EXTI_LineCmd = DISABLE;		/* 禁止 */
	EXTI_Init(&EXTI_InitStructure);

#if 0
	/* 中断优先级配置 最低优先级 这里一定要分开的设置中断，不能够合并到一个里面设置 */
	NVIC_InitStructure.NVIC_IRQChannel = EXTI9_5_IRQn;
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0x03;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0x03;
	NVIC_InitStructure.NVIC_IRQChannelCmd = DISABLE;		/* 禁止 */
	NVIC_Init(&NVIC_InitStructure);
#endif

	PS2_ClearBuf();
}
