==> suoZhangEmbedded/stm32h7_freertos/User/bsp/src/bsp_ps2.c <==
#include "bsp.h"
#define ps2_printf printf
#define RCC_PS2_CLK_ENABLE()   __HAL_RCC_GPIOG_CLK_ENABLE();
#define PORT_PS2_CLK  GPIOG
#define PIN_PS2_CLK   GPIO_PIN_7
#define RCC_PS2_DATA_ENABLE()   __HAL_RCC_GPIOG_CLK_ENABLE();
#define PORT_PS2_DATA GPIOG
#define PIN_PS2_DATA  GPIO_PIN_3
#define PS2_DATA_IS_HIGH()	((PORT_PS2_DATA->IDR & PIN_PS2_DATA) != 0)
#define PS2_CLK_1()  PORT_PS2_CLK->BSRRL = PIN_PS2_CLK				/* CLK = 1 */
#define PS2_CLK_0()  PORT_PS2_CLK->BSRRH = PIN_PS2_CLK				/* CLK = 0 */
#define PS2_DATA_1() PORT_PS2_DATA->BSRRL = PIN_PS2_DATA			/* DATA = 1 */
#define PS2_DATA_0() PORT_PS2_DATA->BSRRH = PIN_PS2_DATA			/* DATA = 0 */

void bsp_InitPS2(void)
{
	GPIO_InitTypeDef gpio_init;

	/* 打开GPIO时钟 */
	RCC_PS2_CLK_ENABLE();
	RCC_PS2_DATA_ENABLE();

	PS2_CLK_1();
	PS2_DATA_1();

	/* 配置CLK 和 DATA 为开漏输出引脚 */	
	gpio_init.Mode = GPIO_MODE_OUTPUT_OD;	/* 设置推挽输出 */
	gpio_init.Pull = GPIO_NOPULL;			/* 上下拉电阻不使能 */
	gpio_init.Speed = GPIO_SPEED_FREQ_LOW;  /* GPIO速度等级 */
	
	gpio_init.Pin = PIN_PS2_CLK;	
	HAL_GPIO_Init(PORT_PS2_CLK, &gpio_init);	
	
	gpio_init.Pin = PIN_PS2_DATA;	
	HAL_GPIO_Init(PORT_PS2_DATA, &gpio_init);		
	
	g_tPS2.TxTimeOut = 0;
	g_tPS2.RxTimeOut = 0;
}

void PS2_StartWork(void)
{
	/* 配置 PS2_CLK 作为中断输入口，下降沿触发 */
	{
		GPIO_InitTypeDef   GPIO_InitStructure;
		
		RCC_PS2_CLK_ENABLE();		/* 打开GPIO时钟 */
		
		GPIO_InitStructure.Mode = GPIO_MODE_IT_FALLING;		/* 中断下降沿触发 */;
		GPIO_InitStructure.Pull = GPIO_NOPULL;
		GPIO_InitStructure.Pin = PIN_PS2_CLK;
		HAL_GPIO_Init(PORT_PS2_CLK, &GPIO_InitStructure);	

		HAL_NVIC_SetPriority(EXTI9_5_IRQn, 2, 0);
		HAL_NVIC_EnableIRQ(EXTI9_5_IRQn);		
	}

	PS2_CLK_1();
	PS2_DATA_1();

	g_tPS2.Status = 0;

	PS2_ClearBuf();		/* 复位FIFO，清除缓冲区 */
}

void PS2_StopWork(void)
{
	/* 配置 PS2_CLK 作为中断输入口，下降沿触发 */
	{
		GPIO_InitTypeDef   GPIO_InitStructure;
		
//		RCC_PS2_CLK_ENABLE();		/* 打开GPIO时钟 */

		/* Configure PC.13 pin as input floating */
		GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_OD;	/* 无中断 */;
		GPIO_InitStructure.Pull = GPIO_NOPULL;
		GPIO_InitStructure.Pin = PIN_PS2_CLK;
		HAL_GPIO_Init(PORT_PS2_CLK, &GPIO_InitStructure);	

		HAL_NVIC_DisableIRQ(EXTI9_5_IRQn);		
	}

	PS2_ClearBuf();
}
